<resources>

    <string name="app_name">Cricket Score &amp; Prediction</string>


<!--    <string name="AdMob_AppId">ca-app-pub-3940256099942544~3347511713</string>
    <string name="AdMob_Banner">ca-app-pub-3940256099942544/6300978111</string>
    <string name="AdMob_Native">ca-app-pub-3940256099942544/2247696110</string>
    <string name="AdMob_Interstitial">ca-app-pub-3940256099942544/1033173712</string>
    <string name="AdMob_OpenApp">ca-app-pub-3940256099942544/3419835294</string>-->


    <string name="AdMob_AppId">ca-app-pub-8231658554240002~1539720527</string>
    <string name="AdMob_Banner">ca-app-pub-8231658554240002/8999446136</string>
    <string name="AdMob_Native">ca-app-pub-8231658554240002/4178364294</string>
    <string name="AdMob_Interstitial">ca-app-pub-8231658554240002/7686364467</string>
    <string name="AdMob_OpenApp">ca-app-pub-8231658554240002/7207852319</string>


    <string name="_0">0</string>
    <string name="_00">0%</string>
    <string name="_00_0_overs_rr_00_00">(00.0 overs, RR:00.0)</string>
    <string name="_1">1</string>
    <string name="extras">Extras</string>
    <string name="over">Over</string>
    <string name="next">next</string>
    <string name="hey_you_seem">Hey, you seem to like this App\10You would help us a great deal with a 5 star rating!</string>
    <string name="exit">exit</string>
    <string name="highest_odi_score">Highest ODI Score</string>
    <string name="highest_score_chased">Highest Score Chased</string>
    <string name="highest_t20_score">Highest T20 Score</string>
    <string name="highest_test_score">Highest Test Score</string>
    <string name="ok">ok</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="o">O</string>

    <string name="series_name">Series Name</string>
    <string name="m">M</string>
    <string name="google_search">Google search</string>
    <string name="share_app">Share App</string>
    <string name="test">Test</string>
    <string name="series">Series</string>
    <string name="message_need_permission">Needs Permissions</string>
    <string name="message_permission">This app needs permission to use this feature. So, please allow access to following permission.</string>
    <string name="r">R</string>
    <string name="sr">SR</string>
    <string name="_1st_bat_win">1st Batting Winning</string>
    <string name="_1st_batting_avg">1st Batting Average score</string>
    <string name="_1st_batting_win">1st Batting Win Percentage</string>
    <string name="_1st_odi">1st ODI</string>
    <string name="_1st_t20">1st T20</string>
    <string name="_1st_test">1st Test</string>
    <string name="_4s">4s</string>
    <string name="_4s_6s">4s/6s</string>
    <string name="_50s_100s">50s/100s</string>
    <string name="_5w">5w</string>
    <string name="_6s">6s</string>
    <string name="about_app">About App</string>
    <string name="ad_attribution">AD</string>
    <string name="ad_icon">AD Icon</string>
    <string name="all_app">All-In-1</string>
    <string name="all_rounder">All Rounder</string>
    <string name="allow_access">Allow Access</string>
    <string name="average">Average</string>
    <string name="average_1st_innings_score">Average 1st Innings score</string>
    <string name="average_1st_innings_score_odi">Average 1st Innings score</string>
    <string name="average_1st_innings_score_t20">Average 1st Innings score</string>
    <string name="b">B</string>
    <string name="b_0_lb_0_nb_0_wd_0">(b 0, lb 0, nb 0, wd 0)</string>
    <string name="balls">Balls</string>
    <string name="bat_s_r">Bat S/R</string>
    <string name="batter">Batter</string>
    <string name="batting_state">Batting State</string>
    <string name="batting_style">Batting Style</string>
    <string name="birth_place">Birth Place</string>
    <string name="born">Born</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bowl_s_r">Bowl S/R</string>
    <string name="bowler">Bowler</string>
    <string name="bowling_ends">Bowling Ends</string>
    <string name="bowling_state">Bowling State</string>
    <string name="bowling_style">Bowling Style</string>
    <string name="bullet">•</string>
    <string name="capacity">Capacity</string>
    <string name="career">Career</string>
    <string name="category">Category</string>
    <string name="categorys">Category:</string>
    <string name="chip_text">Chip text</string>
    <string name="city">City</string>
    <string name="otherleagues">Other Leagues</string>
    <string name="highlights">Highlights</string>
    <string name="summary">Summary</string>
    <string name="commentary">Commentary</string>
    <string name="completed">Completed</string>
    <string name="contact_us">Contact Us</string>
    <string name="date">Date</string>
    <string name="date_amp_time">Date &amp; Time</string>
    <string name="debut">Debut</string>
    <string name="default_message">Check your Internet connection and try again.</string>
    <string name="default_snackbar_message">No active Internet connection!</string>
    <string name="default_title">No Internet</string>
    <string name="desh">-</string>
    <string name="domestic">Domestic</string>
    <string name="draw">Draw</string>
    <string name="eco">ECO</string>
    <string name="economy">Economy</string>
    <string name="fall_of_wickets">Fall of Wickets</string>
    <string name="fc">FC</string>
    <string name="fcm_fallback_notification_channel_label">Miscellaneous</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="format">Format</string>
    <string name="free">FREE</string>
    <string name="free_coin">FREE COIN</string>
    <string name="full_name">Full Name</string>
    <string name="image">Image</string>
    <string name="info">Info</string>
    <string name="innings">Innings</string>
    <string name="international">International</string>
    <string name="ipl">IPL</string>
    <string name="keeper">Keeper</string>
    <string name="keeping_state">Keeping State</string>
    <string name="label">Label</string>
    <string name="last_played">Last Played</string>
    <string name="learn_more">Learn More</string>
    <string name="live">Live</string>
    <string name="lowest_odi_score">Lowest ODI Score</string>
    <string name="lowest_t20_score">Lowest T20 Score</string>
    <string name="lowest_test_score">Lowest Test Score</string>
    <string name="macth_referee">Macth Referee</string>
    <string name="match_info">Match Info</string>
    <string name="match_no">Match No</string>
    <string name="match_officials">Match Officials</string>
    <string name="match_status">Match Status</string>
    <string name="matches">Matches</string>
    <string name="menu_criclytics">Prediction</string>
    <string name="menu_fantasy">Fantasy</string>
    <string name="menu_home">Home</string>
    <string name="menu_ipl">IPL</string>
    <string name="menu_more">More</string>
    <string name="menu_schedules">Schedules</string>
    <string name="menu_score">Live Score</string>
    <string name="mobile_data">Mobile data</string>
    <string name="more">more</string>
    <string name="more_app">More App</string>
    <string name="odis">ODIs</string>
    <string name="player">Player</string>
    <string name="player_bio">Player Bio</string>
    <string name="player_s_homeground">Player\'s Homeground</string>
    <string name="playing_xi">Playing XI</string>
    <string name="please_turn_on">Please turn on Internet</string>
    <string name="please_wait">Please Wait...</string>
    <string name="previous">Previous</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="profile">Profile</string>
    <string name="rankings">Rankings</string>
    <string name="rate_now">Rate Now</string>
    <string name="rate_us">Rate Us</string>
    <string name="recent_odi">Recent ODI</string>
    <string name="recent_t20">Recent T20</string>
    <string name="recent_test">Recent Test</string>
    <string name="records">Records</string>
    <string name="results">Results</string>
    <string name="retry">Retry</string>
    <string name="role">Role</string>
    <string name="runs">Runs</string>
    <string name="score">Score</string>
    <string name="scorecard">Scorecard</string>
    <string name="search">Search...</string>
    <string name="sponsored">SPONSORED</string>
    <string name="squads">Squads</string>
    <string name="stadium_details">Stadium Details</string>
    <string name="stadiums">Stadiums</string>
    <string name="start">Start</string>
    <string name="stats">Stats</string>
    <string name="t20s">T20s</string>
    <string name="team">Teams</string>
    <string name="team_batting_1st_winning">Team Batting 1st Winning %</string>
    <string name="team_batting_1st_winning_odi">ODI Batting 1st Winning %</string>
    <string name="team_batting_1st_winning_t20">T20 Batting 1st Winning %</string>
    <string name="team_s_homeground">Team\'s Homeground</string>
    <string name="thanks_for_using_app">Thanks for using app</string>
    <string name="third_umpire">Third Umpire</string>
    <string name="title">Title</string>
    <string name="toss">Toss</string>
    <string name="total">Total</string>
    <string name="umpires">Umpires</string>
    <string name="upcoming">Upcoming</string>
    <string name="venue">Venue</string>
    <string name="venue_guide">Venue Guide</string>
    <string name="w">W</string>
    <string name="wickets">Wickets</string>
    <string name="wifi">Wifi</string>
    <string name="yet_to_bat">Yet to bat</string>
    <string name="native_text">Native text</string>
    <string name="native_title">Native title</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="navigation_header">Navigation header</string>
</resources>