<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="0.7dp"
        android:background="@color/white" />

    <LinearLayout
        android:id="@+id/ll_scoreCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:background="@color/transperent_5"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="8dp"
        android:weightSum="10">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_margin="5dp"
            android:layout_weight="0.8"
            app:cardBackgroundColor="@color/transperent_5"
            app:cardElevation="0dp">

            <ImageView
                android:id="@+id/img_item_sc_flag"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:src="@drawable/icon_flag" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/txt_item_sc_team"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3.2"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:text="@string/desh"
            android:textColor="@color/textWhite"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_item_sc_teamScore"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:gravity="end"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:text="@string/desh"
            android:textColor="@color/textWhite"
            android:textSize="13sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/img_item_sc_arrow"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:src="@drawable/ic_arrow_down"
            app:tint="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_score_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/transperent_5"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="8dp"
            android:weightSum="12">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4.5"
                android:text="@string/batter"
                android:textAllCaps="true"
                android:textColor="@color/textFmLight"
                android:textSize="12sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.55"
                android:gravity="center"
                android:text="@string/r"
                android:textColor="@color/textFmLight"
                android:textSize="11sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.55"
                android:gravity="center"
                android:text="@string/b"
                android:textColor="@color/textFmLight"
                android:textSize="11sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.1"
                android:gravity="center"
                android:text="@string/_4s"
                android:textColor="@color/textFmLight"
                android:textSize="11sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.1"
                android:gravity="center"
                android:text="@string/_6s"
                android:textColor="@color/textFmLight"
                android:textSize="11sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.2"
                android:gravity="center"
                android:text="@string/sr"
                android:textColor="@color/textFmLight"
                android:textSize="11sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="12">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_batter"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </androidx.core.widget.NestedScrollView>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/transperent_10" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="8dp"
            android:weightSum="12">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4.5"
                android:text="@string/extras"
                android:textColor="@color/textFmBold"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txt_sc_eRun"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.55"
                android:gravity="center"
                android:text="@string/_0"
                android:textColor="@color/textFmBold"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/txt_sc_extra"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5.95"
                android:gravity="center"
                android:text="@string/b_0_lb_0_nb_0_wd_0"
                android:textColor="@color/textFmLight"
                android:textSize="13sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/purple_200"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="8dp"
            android:weightSum="12">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/total"
                android:textColor="@color/textWhite"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txt_sc_totalRun"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3.25"
                android:gravity="center"
                android:text="@string/_0"
                android:textColor="@color/textWhite"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/txt_sc_totalOver"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4.75"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:text="@string/_00_0_overs_rr_00_00"
                android:textColor="@color/textWhite"
                android:textSize="13sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Did not bat: "
                android:textColor="@color/colorTextBlack"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_yetToBat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="13sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/transperent_5"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="8dp"
            android:weightSum="12">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4.5"
                android:text="@string/bowler"
                android:textAllCaps="true"
                android:textColor="@color/textFmLight"
                android:textSize="12sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.55"
                android:gravity="center"
                android:text="@string/o"
                android:textColor="@color/textFmLight"
                android:textSize="11sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.55"
                android:gravity="center"
                android:text="@string/m"
                android:textColor="@color/textFmLight"
                android:textSize="11sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.1"
                android:gravity="center"
                android:text="@string/r"
                android:textColor="@color/textFmLight"
                android:textSize="11sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.1"
                android:gravity="center"
                android:text="@string/w"
                android:textColor="@color/textFmLight"
                android:textSize="11sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.2"
                android:gravity="center"
                android:text="@string/eco"
                android:textColor="@color/textFmLight"
                android:textSize="11sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="12">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_bowler"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </androidx.core.widget.NestedScrollView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/transperent_5"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fall_of_wickets"
                android:textColor="@color/textFmLight"
                android:textSize="14sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/transperent_15" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/transperent_5"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="8dp"
            android:weightSum="12">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/score"
                android:textColor="@color/textFmBold"
                android:textSize="12sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:gravity="center"
                android:text="@string/player"
                android:textColor="@color/textFmBold"
                android:textSize="11sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/over"
                android:textColor="@color/textFmBold"
                android:textSize="11sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/transperent_10" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="12">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_fall_of_wickets"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </androidx.core.widget.NestedScrollView>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
